# ArcFormulator

./: .clang-format  .gitignore  ArcFormulator.pro  CMakeLists.txt  LICENSE  README.md
src/ArcCore/: ArcCore.pro  CMakeLists.txt  GemBezierCurve.cpp  GemBezierCurve.h  Point2D.cpp  Point2D.h
src/ArcCore/curve/: GemBezierCurve.cpp  GemBezierCurve.h  GemCircleCurve.cpp  GemCircleCurve.h  GemCosCurve.cpp  GemCosCurve.h  GemEllipseCurve.cpp  GemEllipseCurve.h  GemHyperbolaCurve.cpp  GemHyperbolaCurve.h  GemLineCurve.cpp  GemLineCurve.h  GemParabolaCurve.cpp  GemParabolaCurve.h  GemSinCurve.cpp  GemSinCurve.h  GemTanCurve.cpp  GemTanCurve.h  curve.h
src/ArcCore/kernel/: GemGeomotry.h
src/ArcCore/kernel/logSystem/: AsyncLogger.cpp  AsyncLogger.h  ConsoleLogOutput.cpp  ConsoleLogOutput.h  FileLogOutput.cpp  FileLogOutput.h  LogFormatter.cpp  LogFormatter.h  LogManager.cpp  LogManager.h  LogMessage.cpp  LogMessage.h  LogOutput.cpp  LogOutput.h  log.h
src/ArcCore/point/: Point3D.cpp  Point3D.h  point.h
src/desktopframework/: CMakeLists.txt  qdfapplication.cpp  qdfevent.cpp  qdfmainwindow.cpp
src/desktopframework/dockwidget/: qdfautohidedockcontainer.cpp  qdfautohidesidebar.cpp  qdfautohidetab.cpp  qdfdockareatabbar.cpp  qdfdockareatitlebar.cpp  qdfdockareawidget.cpp  qdfdockcomponentsfactory.h  qdfdockcontainerwidget.cpp  qdfdockfocuscontroller.cpp  qdfdockmanager.cpp  qdfdockoverlay.cpp  qdfdockoverlaycross.cpp  qdfdockoverlaycross.h  qdfdocksplitter.cpp  qdfdockwidget.cpp  qdfdockwidgethelper.cpp  qdfdockwidgethelper.h  qdfdockwidgettab.cpp  qdfelidinglabel.cpp  qdffloatingdockcontainer.cpp  qdffloatingdragpreview.cpp  qdffloatingdragpreview.h  qdfresizehandle.cpp  qdfresizehandle.h
src/desktopframework/dockwidget/linux/: qdffloatingwidgettitlebar.cpp
src/desktopframework/dockwidget/private/: qdfautohidesidebar_p.h  qdfautohidetab_p.h  qdfdockareatitlebar_p.h  qdfdockareawidget_p.h  qdfdockcontainerwidget_p.h  qdfdockmanager_p.h  qdfdockwidget_p.h  qdfdockwidgettab_p.h  qdfelidinglabel_p.h  qdffloatingdragpreview_p.h
src/desktopframework/include/: qdfplugin.h
src/desktopframework/include/dockwidget/: qdfautohidesidebar.h  qdfautohidetab.h  qdfdockareatabbar.h  qdfdockareatitlebar.h  qdfdockareawidget.h  qdfdockfocuscontroller.h  qdfdockmanager.h  qdfdockoverlay.h  qdfdockwidgettab.h  qdfelidinglabel.h
src/desktopframework/include/ribbon/: qdfofficepopupwindow.h  qdfribbonbuttoncontrols.h  qdfribboncontrols.h  qdfribboncustomizemanager.h  qdfribbonpage.h  qdfribbonstyle.h  qdfstylehelpers.h
src/desktopframework/ribbon/: qdfribbon_def.cpp  qdfribbonbackstageview.cpp  qdfribbonbar.cpp  qdfribbonbuttoncontrols.cpp  qdfribboncontrols.cpp  qdfribboncustomizedialog.cpp  qdfribboncustomizemanager.cpp  qdfribboncustomizepage.cpp  qdfribbongallery.cpp  qdfribbongallerycontrol.cpp  qdfribbongroup.cpp  qdfribboninputcontrols.cpp  qdfribbonpage.cpp  qdfribbonquickaccessbar.cpp  qdfribbonrenamedialog.ui  qdfribbonsliderpane.cpp  qdfribbonstatusbar.cpp  qdfribbonsystempopupbar.cpp  qdfribbontabbar.cpp  qdfribbontabbar.h  qdfribbontooltip.cpp  qdfstylehelpers.cpp  qeffects.cpp  qeffects.h
src/desktopframework/ribbon/private/: qdfribbon_p.cpp  qdfribbon_p.h  qdfribbonbackstageview_p.h  qdfribbonbar_p.h  qdfribbonbutton_p.cpp  qdfribboncontrols_p.h  qdfribboncustomizedialog_p.h  qdfribboncustomizepage_p.h  qdfribbongallery_p.h  qdfribbongroup_p.h  qdfribbonpage_p.h  qdfribbonquickaccessbar_p.h  qdfribbonquickaccessbarcustomizepage.ui  qdfribbonsliderpane_p.h  qdfribbonsystempopupbar_p.h  ui_qdfribbonquickaccessbarcustomizepage.h
src/desktopframework/ribbon/style/: qdfcommonstyle.cpp  qdfcommonstyle_p.h  qdfofficeframehelper.h  qdfofficeframehelper_win.cpp  qdfofficeframehelper_win.h  qdfofficepaintmanager.cpp  qdfofficepopupcolorbutton.cpp  qdfofficepopupmenu.cpp  qdfofficepopupwindow.cpp  qdfofficepopupwindow_p.h  qdfofficestyle.cpp  qdfofficestyle_p.h  qdfpopuphelpers.cpp  qdfpopuphelpers.h  qdfribbonpaintmanager.cpp  qdfribbonstyle.cpp  qdfribbonstyle_p.h
src/desktopframework/src/: CMakeLists.txt
src/desktopframework/src/dockwidget/: qdfautohidedockcontainer.cpp  qdfdockareawidget.cpp  qdfdockcomponentsfactory.cpp  qdfdockcomponentsfactory.h  qdfdockcontainerwidget.cpp  qdfdockoverlay.cpp  qdfdockoverlaycross.cpp  qdfdockwidgethelper.cpp  qdffloatingdockcontainer.cpp  qdffloatingdragpreview.cpp  qdffloatingdragpreview.h  qdfresizehandle.cpp
src/desktopframework/src/dockwidget/linux/: qdffloatingwidgettitlebar.cpp
src/desktopframework/src/dockwidget/private/: qdfautohidesidebar_p.h  qdfdockareatitlebar_p.h  qdfdockfocuscontroller_p.h  qdfdockwidget_p.h
src/desktopframework/src/ribbon/: qdfribbon_def.cpp  qdfribbonbackstageview.cpp  qdfribbonbar.cpp  qdfribbonbuttoncontrols.cpp  qdfribboncustomizedialog.cpp  qdfribboncustomizemanager.cpp  qdfribboncustomizepage.cpp  qdfribbongallerycontrol.cpp  qdfribbongroup.cpp  qdfribboninputcontrols.cpp  qdfribbonpage.cpp  qdfribbonquickaccessbar.cpp  qdfribbontabbar.cpp  qdfribbontooltip.cpp  qdfstylehelpers.cpp  qeffects.cpp  ui_qdfribbonrenamedialog.h
src/desktopframework/src/ribbon/private/: qdfribbon_p.cpp  qdfribbonbutton_p.cpp  qdfribbongroup_p.h  (+3 more)
src/desktopframework/旧/include0/: qdf_global.h  qdfribbon.h
src/desktopframework/旧/src0/: CMakeLists.txt  qdfmainwindow.cpp
src/ui/: CMakeLists.txt  QArcMainWindow.cpp  QArcMainWindow.h  QArcSplashScreen.cpp  QArcSplashScreen.h  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui.pro
src/ui/ribbon/: QArcDataBase.cpp  QArcDataBase.h  QArcRegisterMenu.cpp  QArcRegisterMenu.h
src/ui/ribbon/register/: QArcMenuManagerDialog.cpp  QArcMenuManagerDialog.h  QArcMenuManagerDialog.ui  QArcRibbonRegisterDialog.cpp  QArcRibbonRegisterDialog.h  QArcRibbonRegisterDialog.ui  QArcStringListModel.cpp  QArcStringListModel.h  QArcTabWidget.cpp  QArcTabWidget.h  QArcWidgetItem.cpp  QArcWidgetItem.h
src/ui/shared/: ribbonimages.cpp  ribbonimages.h  ribbonwindow.cpp  ribbonwindow.h
src/ui/view/: QArcGraphicsItem.cpp  QArcGraphicsItem.h  QArcGraphicsView.cpp  QArcGraphicsView.h
(+120 files in other folders)
